# ROS_Caffe_prediction_sample

./: LICENSE  README.md
launch/: execute.launch  pub_sub_sample.launch
src/caffe_predictor/: CMakeLists.txt  package.xml
src/caffe_predictor/data/: deploy.prototxt
src/caffe_predictor/scripts/: predictor_simple.py  predictor_simple_inner_caffe.py  predictor_thread.py  predictor_thread_inner_caffe.py
src/image_transporter/: CMakeLists.txt  package.xml
src/image_transporter/src/: publisher.cpp  subscriber.cpp
